add audio to the maze

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 
     <script type="text/javascript" src="gl-matrix.js"></script>
     <script type="text/javascript" src="rasterize.js"></script>
+    
   </head>
 
   <body onload="main();">
+
+    <audio id="bgAudio" loop>
+      <source src="Mandrill Maze.mp3" type="audio/mpeg">
+    </audio> 
+
     <canvas id="myImageCanvas" width="512" height="512"></canvas>
     <canvas id="myWebGLCanvas" width="512" height="512"></canvas> 
   </body>
