--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Prog 3: Rasterization Solution</title>
+    <title>PROG4 MANDRILL MAZE</title>
     
     <link type="text/css" rel="stylesheet" href="rasterize.css">
 
